# discord_bili_live_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: server.conf.example
scripts/: build_linux_amd64_tar.sh  deploy_from_tar.sh  remote_deploy_via_ssh.sh
src/discord_live_bot/: __init__.py  bili_client.py  bot.py  config.py  db.py  dynamic_client.py  dynamic_screenshot.py  main.py  rendering.py  status_tracker.py
src/discord_live_bot/bili_voice/: __init__.py  cog.py  manager.py  models.py  resolver.py  service.py  views.py
src/discord_live_bot/dota/: __init__.py  client.py  cog.py  match_table.py  models.py  rendering.py  service.py  views.py
src/discord_live_bot/grpc/: __init__.py  dynamic.proto  dynamic_pb2.py  dynamic_pb2_grpc.py
tests/: test_bili_client_fallback.py  test_bot_autocomplete.py  test_bot_dynamic_poll.py  test_db.py  test_dynamic_client.py  test_dynamic_screenshot.py  test_rendering.py  test_status_tracker.py
tests/bili_voice/: test_bili_voice_cog.py  test_bili_voice_service.py  test_manager.py  test_resolver.py
tests/dota/: test_client.py  test_cog.py  test_dota_rendering.py  test_match_table.py  test_service.py  test_views.py
